2006-03-08  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen-tests.rb
	  CodeGen/templates/Tests.cs:
		Start of a very small infrastructure to use tests from
		rotor/mono with Cecil.

	* Mono.Cecil/IMethod.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/CodeWriter.cs:
		Add support for the very special case ldarg 0.
		Patch idea by Vladislav Spivak <spivak@mainsoft.com>

2006-03-07  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/ImageReader.cs
	  Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil/StructureReader.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/ImageReader.cs:
		Allow users to get a loaded image using
		Image.GetImage as they have no access to
		the ImageReader.

2006-03-06  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Signatures/SignatureReader.cs:
		Fix array reading in custom attributes.

2006-03-06  Joshua Tauberer <tauberer@for.net>

	* Mono.Cecil/TypeAttributes.cs: Fixed typo
	  in value for Abstract.

2006-02-27  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/IndexedCollectionImplem.cs
	  CodeGen/templates/IIndexedCollection.cs
	  Mono.Cecil.Cil/InstructionCollection.cs
	  Mono.Cecil.Cil/IInstructionCollection.cs:
		Small API fix, prevent the user from not using
		the CilWorker.

	* Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/Label.cs:
		Remove Label.

	* Mono.Cecil/ReflectionReader.cs:
		Fix typo.

2006-02-20  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Signatures/SignatureWriter.cs:
		Fix a bug when a value is null in a custom attribute.

2006-02-20  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.Metadata/MetadataWriter.cs:
		Fix GetStrongNameSignatureSize to handle the ECMA pseudo-key.

2006-02-07  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyInfos.cs:
		Tag this version 0.3, as users are happy with it.

2006-01-26  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/CustomAttribute.cs:
		Fix cloning of non readable attributes.
